--- a/files/templates/files/home.html
+++ b/files/templates/files/home.html
@@ -1,127 +1,28 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static "styles/home.css" %}"/>
+{% endblock %}
+
+{% block content %}
+
     {% if request.user.is_authenticated %}
-        <h1>Welcome, {{ request.user.name }}</h1>
+        <div class="home home-authorized">
+            <h1>Добро пожаловать, {{ request.user.name }}!</h1>
+            <div class="home--actions">
+                <a class="button button-outlined button-medium">Загрузить файл для просмотра и редактирования</a>
+                <a class="button button-medium">Обезличить файл</a>
+            </div>
+        </div>
     {% else %}
-    <div
-    style="
-      background: #ffffff;
-      border-radius: 100px;
-      padding: 0 0 100px 0;
-    ">
-    <div
-      style="
-        align-items: center;
-        display: flex;
-        border: 1px solid #000000;
-        padding: 25px 49px 25px 33px;
-      ">
-      <svg
-        width="30"
-        height="37"
-        viewBox="0 0 40 47"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        style="flex-shrink: 0">
-        <path
-          d="M39 46H2L27.5172 20.4595H12.2069L39 1V46Z"
-          fill="black"
-          stroke="black" />
-      </svg>
-  
-      <svg
-        width="10"
-        height="38"
-        viewBox="0 0 10 48"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        style="flex-shrink: 0; margin-left: 10px">
-        <path d="M1 47V1H9V47H1Z" fill="black" stroke="black" />
-      </svg>
-  
-      <h1
-        style="
-          font-family: Montserrat;
-          font-size: 30px;
-          font-weight: 600;
-          margin-left: 28px;
-          text-align: center;
-          white-space: nowrap;
-        ">
-        MetaMeld
-        <br />
-      </h1>
-      <svg
-        width="169"
-        height="40"
-        viewBox="0 0 169 40"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        style="flex-shrink: 0; margin-left: 748px">
-        <path
-          d="M20 1H149C159.493 1 168 9.50659 168 20C168 30.4934 159.493 39 149 39H20C9.50659 39 1 30.4934 1 20C1 9.50659 9.50659 1 20 1Z"
-          fill="#D9D9D9"
-          fill-opacity="0.4"
-          stroke="#99A2AB"
-          stroke-opacity="0.2" />
-      </svg>
-  
-      <svg
-        width="169"
-        height="40"
-        viewBox="0 0 169 40"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        style="flex-shrink: 0; margin-left: 44px">
-        <path
-          d="M20 1H149C159.493 1 168 9.50659 168 20C168 30.4934 159.493 39 149 39H20C9.50659 39 1 30.4934 1 20C1 9.50659 9.50659 1 20 1Z"
-          fill="#D9D9D9"
-          fill-opacity="0.4"
-          stroke="#99A2AB"
-          stroke-opacity="0.2" />
-      </svg>
-    </div>
-    <h1
-      style="
-        font-family: Montserrat;
-        font-size: 30px;
-        font-weight: 600;
-        line-height: 1.25;
-        margin: 176 0 0 320;
-      ">
-      Просматривайте и редактируйте DICOM-файлы при помощи MetaMeld
-    </h1>
-    <div
-      style="
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        margin-top: 64px;
-      ">
-      <div
-        style="
-          background: #ffffff;
-          border-radius: 32px;
-          font-family: Montserrat;
-          font-size: 35px;
-          font-weight: 500;
-          text-align: center;
-          white-space: nowrap;
-          border: 1px solid #000000;
-          padding: 26px 120px 19px 124px;
-        ">
-        Начать работу прямо сейчас
-      </div>
-    </div>
-  </div>
+        <div class="home home-anonymous">
+            <h1>Просматривайте и редактируйте DICOM-файлы при помощи MetaMeld</h1>
+            <div class="home--start-button">
+                <a class="button button-outlined button-large" href="{% url 'signin' %}">
+                    Начать работу прямо сейчас
+                </a>
+            </div>
+        </div>
     {% endif %}
-    {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">Выход</a>
-    {% endif %}
-</body>
-</html>
+{% endblock %}
