add templates: signin, signup, contacts, account

--- a/users/templates/users/contacts.html
+++ b/users/templates/users/contacts.html
@@ -1,7 +1,76 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static "styles/home.css" %}"/>
+{% endblock %}
 
 {% block title %}Контакты{% endblock %}
 
 {% block content %}
-    <h1>Сюда нельзя!</h1>
+<div
+  style="
+    background: #ffffff;
+    border-radius: 50px;
+    padding: 261px 224px 143px 224px;
+  ">
+  <div
+    style="
+      border-radius: 20px;
+      border: 1px solid #000000;
+      padding: 67px 157px 191px 126px;
+    ">
+    <h1
+      style="
+        font-family: Montserrat;
+        font-size: 30px;
+        font-weight: 500;
+        line-height: 1.25;
+        margin-left: 1px;
+      ">
+      По вопросам технической поддержки обращаться:
+    </h1>
+    <div style="align-items: center; display: flex; margin-top: 96px">
+      <svg
+        width="318"
+        height="40"
+        viewBox="0 0 318 40"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        style="flex-shrink: 0">
+        <path
+          d="M20 1H298C308.493 1 317 9.50659 317 20C317 30.4934 308.493 39 298 39H20C9.50659 39 1 30.4934 1 20C1 9.50659 9.5066 1 20 1Z"
+          fill="#255272"
+          stroke="#99A2AB"
+          stroke-opacity="0.2" />
+      </svg>
+
+      <svg
+        width="318"
+        height="40"
+        viewBox="0 0 318 40"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        style="flex-shrink: 0; margin-left: 80px">
+        <path
+          d="M20 1H298C308.493 1 317 9.50659 317 20C317 30.4934 308.493 39 298 39H20C9.50659 39 1 30.4934 1 20C1 9.50659 9.5066 1 20 1Z"
+          fill="#255272"
+          stroke="#99A2AB"
+          stroke-opacity="0.2" />
+      </svg>
+    </div>
+    <p
+      style="
+        font-family: Montserrat;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 1.25;
+        margin: 96 0 0 2;
+      ">
+      Режим работы:
+      <br />
+      Пн-пт 10:00 - 18:00
+    </p>
+  </div>
+</div>
 {% endblock %}
