--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,15 +1,42 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Вход</title>
-</head>
-<body>
-<h2>Вход</h2>
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}Вход{% endblock %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'styles/signin.css' %}">
+{% endblock %}
+
+{% block content %}
+<div class="login-container">
+    <h1 class="login-title">Вход</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Войти</button>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <div class="input-group">
+                <img src="{% static 'images/email.svg' %}" alt="Email Icon">
+                <input type="email" id="email" name="email" placeholder="Введите электронную почту" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="password">Пароль</label>
+            <div class="input-group">
+                <img src="{% static 'images/password.svg' %}" alt="Password Icon">
+                <input type="password" id="password" name="password" placeholder="Введите пароль" required>
+            </div>
+        </div>
+        {% if form.errors %}
+        <div class="error-message">
+            <p>{{ form.non_field_errors }}</p>
+        </div>
+        {% endif %}
+        <div class="button-container">
+            <button type="submit" class="login-button">Войти</button>
+        </div>
+        <div class="button-container">
+            <a href="{% url 'signup' %}" class="signup-button">Регистрация</a>
+        </div>
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
