--- a/static/styles/signin.css
+++ b/static/styles/signin.css
@@ -41,7 +41,7 @@
     margin-left: 12px;
     padding: 8px 0;
     font-family: 'Poppins', sans-serif;
-    color: #99a2ab80;
+    color: #000;
 }
 
 .button-container {
