--- a/static/styles/signup.css
+++ b/static/styles/signup.css
@@ -48,3 +48,21 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     color: #000000;
 }
+
+.signup-button {
+    background: #000000;
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 32px;
+    padding: 11px 183px;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    border: 1px solid #000000;
+    transition: background-color 0.3s, color 0.3s;
+    margin-top: 20px;
+    display: inline-block; /* кнопка строчно-блочным элементом */
+}
