--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
             <a class="navbar--buttons--button" href="{% url "contacts" %}">
                 Контакты
             </a>
-            <a class="navbar--buttons--button" href="{% url "help" %}">
+            <a class="navbar--buttons--button" href="https://help-metameld.lovepaw.ru/">
                 Помощь
             </a>
             {% if request.user.is_authenticated %}
