--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Авторизация{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'styles/signup.css' %}">
@@ -10,38 +10,43 @@
 {% block content %}
     <div class="container">
         <h1>Регистрация</h1>
-        <div class="input-group">
-            <p>Email</p>
-            <div class="input-with-icon">
-              <img src="{% static 'images/email.svg' %}" alt="Email Icon">
-              <input type="email" id="email" name="email" placeholder="Введите электронную почту" required>
+        <form method="post">
+            {% csrf_token %}
+            <div class="input-group">
+                <p>Email</p>
+                <div class="input-with-icon">
+                    <img src="{% static 'images/email.svg' %}" alt="Email Icon">
+                    <input type="email" id="email" name="email" placeholder="Введите электронную почту" required>
+                </div>
+                <div class="separator"></div>
             </div>
-            <div class="separator"></div>
-        </div>
-        <div class="input-group">
-            <p>Имя пользователя</p>
-            <div class="input-with-icon">
-              <img src="{% static 'images/user.svg' %}" alt="Account Icon">
-                <input type="text" id="username" name="username" placeholder="Введите имя" required>
+            <div class="input-group">
+                <p>Имя пользователя</p>
+                <div class="input-with-icon">
+                    <img src="{% static 'images/user.svg' %}" alt="Account Icon">
+                    <input type="text" id="username" name="name" placeholder="Введите имя" required>
+                </div>
+                <div class="separator"></div>
             </div>
-            <div class="separator"></div>
-        </div>
-        <div class="input-group">
-            <p>Пароль</p>
-            <div class="input-with-icon">
-              <img src="{% static 'images/password.svg' %}" alt="Password Icon">
-              <input type="password" id="password" name="password" placeholder="Введите пароль" required>
+            <div class="input-group">
+                <p>Пароль</p>
+                <div class="input-with-icon">
+                    <img src="{% static 'images/password.svg' %}" alt="Password Icon">
+                    <input type="password" id="password" name="password1" placeholder="Введите пароль" required>
+                </div>
+                <div class="separator"></div>
             </div>
-            <div class="separator"></div>
-        </div>
-        <div class="input-group">
-          <p>Пароль</p>
-          <div class="input-with-icon">
-            <img src="{% static 'images/password.svg' %}" alt="Password Icon">
-            <input type="password" id="password2" name="password2" placeholder="Повторите пароль" required>
-          </div>
-          <div class="separator"></div>
-      </div>
+            <div class="input-group">
+                <p>Повторите пароль</p>
+                <div class="input-with-icon">
+                    <img src="{% static 'images/password.svg' %}" alt="Password Icon">
+                    <input type="password" id="password2" name="password2" placeholder="Повторите пароль" required>
+                </div>
+                <div class="separator"></div>
+            </div>
+            <div class="button-container">
+                <button type="submit" class="signup-button">Зарегистрироваться</button>
+            </div>
+        </form>
     </div>
 {% endblock %}
-
