update anonymization and edition

--- a/files/templates/files/display.html
+++ b/files/templates/files/display.html
@@ -1,113 +1,54 @@
+{% extends "base.html" %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Отображение DICOM файла</title>
-    <style>
-        /* Стили для контейнера DICOM */
-        .dicom-container {
-            display: flex;  /* Используем Flexbox для распределения элементов */
-            flex-direction: row;  /* Располагаем элементы в строку */
-            justify-content: space-between;  /* Равномерно распределяем пространство между элементами */
-            align-items: flex-start;  /* Выравниваем элементы по верхнему краю */
-            max-width: 1500px;  /* Максимальная ширина контейнера DICOM */
-            margin: 0 auto;  /* Центрируем контейнер по горизонтали */
-            padding: 20px;  /* Добавляем отступы вокруг контейнера */
-        }
+{% block head %}
+    <link rel="stylesheet" href="{% static "styles/display.css" %}"/>
+{% endblock %}
 
-        /* Стили для блока с изображением DICOM */
-        .dicom-image {
-            max-width: 50%;  /* Максимальная ширина блока с изображением */
-            margin-right: 5px;  /* Отступ справа */
-        }
-
-        /* Стили для блока с таблицей DICOM */
-        .dicom-table {
-            max-width: 45%;  /* Максимальная ширина блока с таблицей */
-            overflow-y: auto;  /* Включаем вертикальную прокрутку при необходимости */
-            max-height: 80vh;  /* Максимальная высота блока (80% высоты видимой области экрана) */
-        }
-
-        /* Стили для таблицы */
-        table {
-            width: 100%;  /* Ширина таблицы 100% от родительского контейнера */
-            border-collapse: collapse;  /* Схлопываем границы ячеек */
-            margin-bottom: 20px;  /* Отступ снизу таблицы */
-        }
-
-        /* Стили для ячеек таблицы */
-        td {
-            padding: 8px;  /* Внутренний отступ ячеек */
-            border: 1px solid #ddd;  /* Границы ячеек таблицы */
-            text-align: left;  /* Выравнивание текста в ячейках по левому краю */
-        }
-
-        /* Стили для заголовков таблицы */
-        th {
-            padding: 8px;  /* Внутренний отступ заголовков */
-            border: 1px solid #ddd;  /* Границы заголовков таблицы */
-            text-align: left;  /* Выравнивание текста в заголовках по левому краю */
-            background-color: #f2f2f2;  /* Фон заголовков таблицы */
-        }
-
-        /* Стили для кнопки сохранения */
-        .btn-primary {
-            background-color: #007bff;  /* Цвет фона кнопки */
-            color: #fff;  /* Цвет текста кнопки */
-            border: none;  /* Убираем границы кнопки */
-            padding: 10px 20px;  /* Внутренние отступы кнопки */
-            cursor: pointer;  /* Устанавливаем курсор в виде указателя */
-            border-radius: 5px;  /* Скругляем углы кнопки */
-        }
-
-        /* Стили для отзывчивого изображения */
-        .img-fluid {
-            max-width: 100%;  /* Максимальная ширина изображения 100% от родительского контейнера */
-            height: auto;  /* Автоматическая высота изображения */
-            display: block;  /* Блочное отображение изображения */
-            margin-bottom: 20px;  /* Отступ снизу изображения */
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <!-- Основной контейнер -->
-        <div class="dicom-container">
-            <!-- Контейнер для изображения и таблицы DICOM -->
-            <div class="dicom-image">
-                <!-- Блок с изображением DICOM -->
-                {% if image_base64 %}
-                    <!-- Проверка наличия изображения -->
-                    <img src="data:image/png;base64,{{ image_base64 }}" class="img-fluid" alt="DICOM Image">
-                    <!-- Отображение изображения DICOM -->
-                {% else %}
-                    <p>Изображение не доступно.</p>
-                    <!-- Вывод текста, если изображение отсутствует -->
-                {% endif %}
-            </div>
-            <div class="dicom-table">
-                <!-- Блок с таблицей DICOM -->
-                {% if tags_html %}
-                    <form method="post" action="{% url 'save_dicom_file' %}">
-                        <!-- Форма для отправки данных -->
-                        {% csrf_token %}
-                        <!-- CSRF-токен для безопасности -->
-                        {{ tags_html|safe }}
-                        <!-- Вставка HTML содержимого таблицы без экранирования -->
-                        <button type="submit" class="btn btn-primary mt-2">Сохранить изменения</button>
-                        <!-- Кнопка для отправки формы -->
-                    </form>
-                {% else %}
-                    <p>Данные DICOM не доступны.</p>
-                    <!-- Вывод текста, если таблица данных DICOM отсутствует -->
-                {% endif %}
-            </div>
+{% block content %}
+<form method="post">
+    {% csrf_token %}
+    <div class="display-container">
+        <img src="data:image/png;base64,{{ image_base64 }}" alt="DICOM Image" class="display-image">
+        <div class="display-table-wrapper">
+            <table class="display-table">
+                <thead>
+                    <tr>
+                        <th width="150px">Тэг</th>
+                        <th>Название свойства</th>
+                        <th width="40%">Значение свойства</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for tag in tags %}
+                        <tr>
+                            <td>{{ tag.tag }}</td>
+                            <td>{{ tag.name }}</td>
+                            <td>
+                                <input
+                                    name="{{ tag.tag }}"
+                                    value="{{ tag.value }}"
+                                    class="display-table-input"
+                                    type="{{ tag.type }}"
+                                    lang="en"
+                                    step="any"
+                                    {% if tag.readonly %}
+                                    disabled
+                                    {% endif %}
+                                >
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-</body>
-</html>
-
+    <div class="display-buttons">
+        <button type="submit" class="display-button">Сохранить</button>
+        <a class="display-button" href="{% url 'download_file' file_id=file_id %}" download>Скачать</a>
+    </div>
+</form>
+{% endblock %}
 
 
 
