--- a/files/templates/files/upload_file.html
+++ b/files/templates/files/upload_file.html
@@ -1,4 +1,4 @@
-<html lang="en">
+{% comment %} <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Загрузка</title>
@@ -44,4 +44,4 @@
     </div>
     {% endblock %}
 </body>
-</html>
+</html> {% endcomment %}
