--- a/files/templates/files/save_file.html
+++ b/files/templates/files/save_file.html
@@ -7,9 +7,9 @@
 
 {% block content %}
     <div class="home home-authorized">
-        <h1>Файл успешно анонимизирован!</h1>
+        <h1>Файл успешно обезличен!</h1>
         <div class="home--actions">
-            <a href="{% url 'download_file' file_id=file_id %}" class="button button-medium" download>Скачать анонимизированный файл</a>
+            <a href="{% url 'download_file' file_id=file_id %}" class="button button-medium" download>Скачать файл</a>
         </div>
     </div>
 {% endblock %}
